# demo-python

./: .gitignore  README.md  dev.db  pyproject.toml  task_assignment.db
.catpaw/rules/: catpaw-baserules.md  python-backend-structure.md  self-improvement.md  stack-and-versions.md
.cursor/rules/: cursor-rules.mdc  key-features-list.mdc  prd-generator.mdc  prd-guidelines.mdc  progress-generator.mdc  python-backend-structure.mdc  self-improvement.mdc  stack-and-versions.mdc
app/: main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: __init__.py  router.py
app/core/: config.py  database.py  exceptions.py  logging.py  memory_storage.py  security.py  storage_factory.py  websocket.py
app/models/: base.py  document.py  task.py  user.py
app/repositories/: base.py  document_repository.py  memory_document_repository.py
app/schemas/: __init__.py  annotation.py  comment.py  document.py  hello.py  room.py  task.py  user.py  websocket.py
app/services/: __init__.py  annotation_service.py  base.py  comment_service.py  document_service.py  room_registry.py  task_service.py  text_render_service.py  user_service.py
app/tests/: conftest.py  test_auth_endpoints.py  test_refresh_token.py  test_user_endpoints.py  test_user_model.py  test_user_service.py
app/utils/: __init__.py  font_cache.py
docs/: PRD-realtime-annotation.md  PRD.md  phase3_summary.md  phase5_summary.md  phase6_summary.md  phase8_completion_summary.md  prd-elevator-system.md  prd.md  progress.md
migrations/: alembic.ini  env.py
scripts/: demo1.py  demo_font_download.py  example_text_render.py
(+50 files in other folders)
